# scripts

./: .gitignore  README.md  pyproject.toml
scripts/ai/chatgpt-heatmap/: .gitignore  ai-heatmap.ipynb
scripts/coding/daily_coding_problem/: README.md  __init__.py  generate_problems_csv.py  parsing-neetcode-questions.py  parsing_neetcode_questions.py  schemas.py
scripts/coding/daily_coding_problem/assets/: email-template.html  neetcode-150-questions.html
scripts/coding/daily_coding_problem/data/: neetcode_150_schedule.csv
scripts/coding/daily_coding_problem/output/: neetcode-problems.json  neetcode_150_schedule.csv
scripts/finance/: calculating-rental-savings.py  calculating_rental_savings.py
scripts/utils/: os.py
