[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Bosire Nyakundi <nyakundi@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
